fix(radio): vertical align

--- a/src/radio/radio.less
+++ b/src/radio/radio.less
@@ -29,7 +29,7 @@
 .@{prefix}-radio {
   position: relative;
   display: inline-flex;
-  vertical-align: middle;
+  align-items: center;
   font-size: @radio-font-size;
   background: @radio-bg-color;
   position: relative;
